# file_analysis_agent

./: LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-14-local-file-analysis-agent-plan.md
docs/superpowers/specs/: 2026-07-14-local-file-analysis-agent-design.md
file_analysis_agent/: __init__.py  cli.py  config.py  errors.py  resources_loader.py
file_analysis_agent/agent/: __init__.py  loop.py  models.py  subagent.py
file_analysis_agent/clients/: __init__.py  factory.py  fake.py  litellm_client.py  normalization.py  openai_compatible.py  protocol.py
file_analysis_agent/memory/: __init__.py  blackboard.py  token_counter.py
file_analysis_agent/resources/: __init__.py
file_analysis_agent/resources/prompts/: __init__.py  blackboard_update.md  subagent_system.md  system.md
file_analysis_agent/resources/tools/: __init__.py  file_tools.json
file_analysis_agent/sandbox/: __init__.py  errors.py  resolver.py
file_analysis_agent/tools/: __init__.py  filesystem.py  registry.py
tests/: conftest.py  test_blackboard.py  test_cli.py  test_clients.py  test_loop_subagent.py  test_resources.py  test_sandbox_tools.py
