[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-analysis-agent"
version = "0.1.0"
description = "A read-only local file analysis agent with provider-independent tool calling"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "File Analysis Agent Contributors" }]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.35"]
litellm = ["litellm>=1.40"]
dev = ["build>=1.2", "mypy>=1.10", "pytest>=8", "ruff>=0.5"]

[project.scripts]
file-analysis-agent = "file_analysis_agent.cli:main"

[tool.setuptools.packages.find]
include = ["file_analysis_agent*"]

[tool.setuptools.package-data]
file_analysis_agent = ["resources/prompts/*.md", "resources/tools/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
files = ["file_analysis_agent", "tests"]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
